src/objects/Quality_Review_Tracking__c.object
<CustomObject>
    <description>This object is for the QRS to input work completed daily</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Daily_Goal__c</fullName>
        <label>Daily Goal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Worked__c</fullName>
        <label>Date Worked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Not_Met_Because__c</fullName>
        <label>Goal Not Met Because</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Management_Comments__c</fullName>
        <label>Management Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OT_Hours_Worked__c</fullName>
        <label>OT Hours Worked</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Report_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pending Report 10</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quality Review Tracking (Pending Report 10)</relationshipLabel>
        <relationshipName>Quality_Review_Tracking9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Report_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pending Report 1</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quality Review Tracking</relationshipLabel>
        <relationshipName>Quality_Review_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Report_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pending Report 2</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quality Review Tracking (Pending Report 2)</relationshipLabel>
        <relationshipName>Quality_Review_Tracking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queues_Worked__c</fullName>
        <label>Queues Worked</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A Queue</fullName>
                </value>
                <value>
                    <fullName>B Queue</fullName>
                </value>
                <value>
                    <fullName>QA Queue</fullName>
                </value>
                <value>
                    <fullName>D Queue</fullName>
                </value>
                <value>
                    <fullName>Second Review</fullName>
                </value>
                <value>
                    <fullName>Special Project</fullName>
                </value>
                <value>
                    <fullName>Mentor Review</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reg_Hours_Worked__c</fullName>
        <label>Reg Hours Worked</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Listing__c</fullName>
        <label>Report Listing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Errors__c</fullName>
        <label># of Errors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Reports_Approved__c</fullName>
        <label># of Reports Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>or_Reports_Pending__c</fullName>
        <label># of Reports Pending</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quality Review Tracking</label>
    <listViews>
        <fullName>Aaron_Cisneros</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Cisneros</value>
        </filters>
        <label>Aaron Cisneros</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amanda_Salazar</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Amanda</value>
        </filters>
        <label>Amanda Salazar</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amber_Connaghan</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Amber</value>
        </filters>
        <label>Amber Connaghan</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Britt_Stickney</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Stickney</value>
        </filters>
        <label>Britt Stickney</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Caitlin_Biljan</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Biljan</value>
        </filters>
        <label>Caitlin Biljan</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Carmel_Lansangan</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Lansangan</value>
        </filters>
        <label>Carmel Lansangan</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Christina_Garcia</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Garcia</value>
        </filters>
        <label>Christina Garcia</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Daniel_Salazar</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Daniel</value>
        </filters>
        <label>Daniel Salazar</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Diane_Camposs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Campos</value>
        </filters>
        <label>Diane Campos</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Eileen_Jones</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Jones</value>
        </filters>
        <label>Eileen Jones</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Haelee_Powell</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Powell</value>
        </filters>
        <label>Haelee Powell</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hannah_McCredie</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>McCredie</value>
        </filters>
        <label>Hannah McCredie</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Humberto_Jimenez</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Humberto</value>
        </filters>
        <label>Humberto Jimenez</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jaime_Gonzalez</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Worked__c</columns>
        <columns>Reg_Hours_Worked__c</columns>
        <columns>OT_Hours_Worked__c</columns>
        <columns>Daily_Goal__c</columns>
        <columns>Queues_Worked__c</columns>
        <columns>of_Reports_Approved__c</columns>
        <columns>or_Reports_Pending__c</columns>
        <columns>Goal_Not_Met_Because__c</columns>
        <columns>Comments__c</columns>
        <columns>Pending_Report_1__c</columns>
        <columns>Pending_Report_2__c</columns>
        <columns>Pending_Report_3__c</columns>
        <columns>Pending_Report_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Gonzalez</value>
        </filters>
        <label>Jaime Gonzalez</label>
        <sharedTo>
            <group>X01President</group>
            <group>X02VicePresidents</group>
            <group>X03ExecutiveManagers</group>
            <group>X04SupervisorsLeads</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Quality Review Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Review Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>